--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </a>
         </div>
         <footer>
-            Feito com ♥ pela <a href="https://Rocketseat.com.br">Rocketseat</a>
+            Feito com ♥ pela <a href="https://Rocketseat.com.br" target="_blank">Rocketseat</a>
         </footer>
     </section>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
